--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ActualApp</string>
-    <string name="register_nbelow_n">Register\nbelow!\n</string>
+    <string name="register_nbelow">Register\nbelow!\n</string>
     <string name="name">Name</string>
     <string name="email">Email</string>
     <string name="mobile_number">Mobile Number</string>
